Update 'yw8mgkrbh-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe-java-quarkus:4bfb0e0e7d884038d1cb392e3dcb7fd681afa21d@sha256:d5e958ed92e1ffe13c906fdec0144e2b011038ddc5e8b7d23aa4f737e12f8e67

--- a/components/yw8mgkrbh-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/yw8mgkrbh-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: yw8mgkrbh-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-quarkus:4bfb0e0e7d884038d1cb392e3dcb7fd681afa21d@sha256:d5e958ed92e1ffe13c906fdec0144e2b011038ddc5e8b7d23aa4f737e12f8e67
+          name: container-image
